--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,41 +1,69 @@
-.wrapper{
+.wrapper {
   display: flex;
 }
-
-.side_bar{
-  width: 300px;
+.side-bar {
   background-color: #253141;
+  width: 300px;
+  height: 100vh;
 }
 
-.main_chat{
-  width: calc(100vw - 300px);
-  background-color: #FFFFFF;
-}
-
-.side-bar-header{
+.side-bar-header {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.rooms{
-  height: calc(100vh - 100px);
+.header-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
+.create-room a {
+  font-size: 10px;
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
+}
+
+.rooms {
   background-color: #2F3E51;
+  height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll
 }
 
-.chat-header{
+.room{
+  margin: 20px 0 40px;
+}
+
+.room a {
+  color: white;
+  text-decoration: none;
+}
+
+.chat {
+  background-color: #FFFFFF;
+  width: calc(100vw - 300px);
+}
+
+.chat-header {
   height: 100px;
   padding: 0 40px;
 }
 
-.messages{
-  height: calc(100vh - 190px);
+.messages {
   background-color: #FAFAFA;
+  height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
 }
 
-.form{
-  height: 90px;
+.form {
   background-color: #DDDDDD;
+  height: 90px;
   padding: 20px 40px;
 }
