--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -54,16 +54,102 @@
 .chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.group-title{
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+
+.group-button{
+  margin-top: 40px;
+}
+
+.group-button a {
+  color: darkred;
+  text-decoration: none;
+  border: 1px solid darkred;
+  padding: 20px;
 }
 
 .messages {
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
+  overflow: scroll
+}
+
+.message{
+  margin-top: 10px;
+}
+
+.message-upper{
+  display: flex;
+}
+
+.message-name{
+  font-size: 16px;
+  color: #434A54;
+  margin-right: 10px;
+}
+
+.message-date{
+  font-size: 10px;
+  color: #999;
+}
+
+.message-lower{
+  margin-top: 10px;
+}
+.message-content{
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
 }
 
 .form {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+}
+
+.form-input {
+  background-color: white;
+  display: flex;
+  width: 100%;
+}
+
+.form-message {
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.form-submit{
+  height: 50px;
+  font-size: 16px;
+  color: white;
+  background-color: #38AEF0;
+  border: none;
+  padding: 0 20px;
+  margin-left: 15px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
