--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,8 +1,63 @@
 <div class="chat-header">
+  <div class="group-title">
+    hogehuga
+  </div>
+  <div class="group-button">
+    <a href="#">チャットを終了する</a>
+  </div>
 </div>
 
 <div class="messages">
+
+  <div class="message">
+    <div class="message-upper">
+      <div class="message-name">つよし</div>
+      <div class="message-date">2024//01/31(Wed) 22:00:00</div>
+    </div>
+    <div class="message-lower">
+      <div class="message-content">やったー！</div>
+    </div>
+  </div>
+  
+    <div class="message">
+    <div class="message-upper">
+      <div class="message-name">つよし</div>
+      <div class="message-date">2024//01/31(Wed) 22:00:00</div>
+    </div>
+    <div class="message-lower">
+      <div class="message-content">やったー！</div>
+    </div>
+  </div>
+
+    <div class="message">
+    <div class="message-upper">
+      <div class="message-name">つよし</div>
+      <div class="message-date">2024//01/31(Wed) 22:00:00</div>
+    </div>
+    <div class="message-lower">
+      <div class="message-content">やったー！</div>
+    </div>
+  </div>
+
+    <div class="message">
+    <div class="message-upper">
+      <div class="message-name">つよし</div>
+      <div class="message-date">2024//01/31(Wed) 22:00:00</div>
+    </div>
+    <div class="message-lower">
+      <div class="message-content">やったー！</div>
+    </div>
+  </div>
+
 </div>
 
 <div class="form">
+  <div class="form-input">
+    <input class="form-message" placeholder= "type a message">
+        <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+    <input class="form-submit" type="submit" value="送信">
 </div>
