--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,6 @@
 <div class="chat-header">
   <div class="group-title">
-    hogehuga
+    <%= @room.name %>
   </div>
   <div class="group-button">
     <a href="#">チャットを終了する</a>
